# design_patterns

./: Makefile  README.md  docker-compose.yml  pyproject.toml
patterns/abstract_factory/: README.md
patterns/abstract_factory/cache/: base.py  cassandra.py  redis.py
patterns/abstract_factory/db/: base.py
patterns/abstract_factory/factory/: base.py  pg_cassandra.py  pg_redis.py  sqlite_cassandra.py  sqlite_redis.py
patterns/adapter/: README.md
patterns/adapter/api/adapters/: new_api.py
patterns/adapter/api/v1/: api.py  base.py
patterns/adapter/api/v2/: api.py  base.py
patterns/bridge/: README.md
patterns/bridge/color/: base.py  blue.py  red.py
patterns/bridge/shape/: base.py  round.py  square.py
patterns/factory_method/: README.md
patterns/factory_method/db/: postgres.py  sqlite.py
patterns/factory_method/factory/: base.py
patterns/factory_method/factory/db/: base.py  postgres.py  sqlite.py
patterns/singleton/: README.md  __init__.py
tests/: Dockerfile  requirements.txt
tests/unit/: conftests.py
tests/unit/src/: test_abstract_factory.py  test_adapter.py  test_bridge.py  test_factory_method.py  test_singletone.py
