[tool.poetry]
name = "design_patterns"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
loguru = "^0.7.2"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
cassandra-driver = "^3.28.0"
redis = "^5.0.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"